@@ -1,5 +1,17 @@
 2006-06-20  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/sbuild-custom-error.tcc (format_error): detail and error
+	arguments were used in the wrong order in the two argument case.
+
+	* schroot/dchroot-chroot-config.cc (parse_data): Use the
+	parse_error class.
+
+	* schroot/sbuild-chroot-config.(cc|h): Use the custom_error
+	exception class.  Merge check_security with load_data.
+	(load_data): Report filename when throwing a parse error.
+
+2006-06-20  Roger Leigh  <rleigh@debian.org>
+
 	* schroot/sbuild-personality.(cc|h): Use the custom_error
 	exception class.
 
